hphp/test/slow/autoload/invalid-class.1.php.expectf
bool(false)

Fatal error: Class undefined: -illegal-class in %s on line 13
